tests/interpreter/binary-expression-subtract-bad-types.stderr
error: cannot subtract 'String' from 'Number'
 --> $DIR/binary-expression-subtract-bad-types.lox:1:1
  |
1 | 10 - "foo";
  | ^^^^^^^^^^
